--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="./img/bandeira-do-brasil_1401-76.png" alt="bandeira" class="img-secao_idade">
         <input type="number" name="idade" id="idade" class="inpt">
         
-        <button class="btn-style" id="btn">votar</button>
+        <button class="btn-style" id="btn">Verificar</button>
 
         <div id="aviso" class="aviso">
 
